fix : fix bearer token handler docs
