# docs/swagger.json
@@ -78,7 +78,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Invalidate user token",
@@ -169,7 +169,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Submit a new tax report",
@@ -218,6 +218,11 @@
         },
         "/wajibpajak": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all registered tax payers",
                 "consumes": [
                     "application/json"
@@ -416,14 +421,14 @@
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
-            "description": "JWT Authorization header using the Bearer scheme. Example: \"Authorization: Bearer {token}\"",
-            "type": "apiKey",
-            "name": "AUthorization",
-            "in": "header"
-        },
         "BasicAuth": {
             "type": "basic"
+        },
+        "BearerAuth": {
+            "description": "JWT Authorization header using the Bearer scheme. Example: \"Authorization: Bearer {token}\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
